--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ Django==5.1.2
 Requests==2.32.3
 django-cors-headers==3.14.0
 python-decouple==3.8
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+Pillow==10.1.0
