More updates for dark mode and fixed books displaying as different sizes

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
 #The included values should work when hosting the app locally. You must create your own secret_keyand obtain a google_books_api_key as well as a nyt_api_key.
-SECRET_KEY=abc123
+SECRET_KEY=django-insecure-!haug26)7a01^yu%ulzqg7qag-zmwc7)4b3349+71zj9^9plg)
 DEBUG=True
 #For Allowed_Hosts, each value is separated by a single comma with no spaces.
 #You must specify the host url for the api as one of the allowed hosts.
 ALLOWED_HOSTS=localhost,127.0.0.1
-GOOGLE_BOOKS_API_KEY=abc123
-NYT_API_KEY=abc123
+GOOGLE_BOOKS_API_KEY=AIzaSyAYbznR7UPKPV8nmciZHFfLNzxwcgfyFVg
+NYT_API_KEY=KRTfJAmqiVJk400CgY54diypVIEl7KOv
 WEBAPP_BASE_URL=http://localhost:3000
